--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
-html{
-  font-family: verdana;
+body{
+   width:100%;
+   min-height: 100vh;
+   /*background-size: cover;*/
+ }
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
