--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body{
  }
 
 footer {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   width: 100%;
 }
@@ -14,4 +14,9 @@ footer {
 }
 .dropdown-button{
   margin-top:30px;
+}
+.img img{
+  width: 70%;
+  height: 150px;
+  margin-left: 150px;
 }
