--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,8 @@ footer {
   height: 85px;
   margin-left: 200px;
 }
+@media only screen and (max-width:480px) {
+.brand-logo {
+  font-size: 16px;
+  }
+ }
